--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>health_service</module>
         <module>health_web</module>
         <module>health_jobs</module>
+        <module>health_mobile</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -198,6 +199,18 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-taglibs</artifactId>
                 <version>${spring.security.version}</version>
+            </dependency>
+
+            <!--阿里云服务器短信平台-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>3.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+                <version>1.0.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
