传智健康项目第八天提交（统计结果实现与excle报表导出）

--- a/health_common/pom.xml
+++ b/health_common/pom.xml
@@ -145,6 +145,19 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
         </dependency>
+
+        <!-- 导入iText报表 -->
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            
+        </dependency>
+        <!-- 导入iText报表，支持中文 -->
+        <dependency>
+            <groupId>com.alpha</groupId>
+            <artifactId>itextasian</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
